mcp-server-go/build_output.txt
cargo : warning: unused config key `http.low-speed-timeout` in `C:\Users\Hom
eAdmin\.cargo\config.toml`
At line:1 char:1
+ cargo build --release > ../../../build_output.txt 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warning: unused...go\config.to 
   ml`:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
   Compiling ast_indexer_rust v0.1.0 (D:\AI_Project\MPM-Coding\mcp-server-go
\internal\services\ast_indexer_rust)
warning: unused import: `std::io::Write`
 --> src\main.rs:9:5
  |
9 | use std::io::Write;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `to_string_lossy` found for struct `std::strin
g::String` in the current scope
   --> src\main.rs:896:39
    |
896 |     let project_prefix = args.project.to_string_lossy().replace("\\", 
"/");
    |                                       ^^^^^^^^^^^^^^^
    |
help: there is a method `to_string` with a similar name
    |
896 -     let project_prefix = args.project.to_string_lossy().replace("\\", 
"/");
896 +     let project_prefix = args.project.to_string().replace("\\", "/");
    |

error[E0599]: no method named `to_string_lossy` found for struct `std::strin
g::String` in the current scope
    --> src\main.rs:1658:39
     |
1658 |     let project_prefix = args.project.to_string_lossy().replace("\\",
 "/");
     |                                       ^^^^^^^^^^^^^^^
     |
help: there is a method `to_string` with a similar name
     |
1658 -     let project_prefix = args.project.to_string_lossy().replace("\\",
 "/");
1658 +     let project_prefix = args.project.to_string().replace("\\", "/");
     |

error[E0599]: no method named `to_string_lossy` found for struct `std::strin
g::String` in the current scope
    --> src\main.rs:2279:39
     |
2279 |     let project_prefix = args.project.to_string_lossy().replace("\\",
 "/");
     |                                       ^^^^^^^^^^^^^^^
     |
help: there is a method `to_string` with a similar name
     |
2279 -     let project_prefix = args.project.to_string_lossy().replace("\\",
 "/");
2279 +     let project_prefix = args.project.to_string().replace("\\", "/");
     |

For more information about this error, try `rustc --explain E0599`.
warning: `ast_indexer_rust` (bin "ast_indexer_rust") generated 1 warning
error: could not compile `ast_indexer_rust` (bin "ast_indexer_rust") due to 
3 previous errors; 1 warning emitted
